# poetry-demo1

./: README.md  pyproject.toml
poetry_demo1/: poetrydemo1.py
tests/: test_poetry_demo1.py
